# veygo-httpd-rust

./: .env.example  .gitignore  Cargo.toml
.github/workflows/: build-linux-gnu.yml  rust.yml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2025-02-11-211353_setup_do_not_rent_table/: down.sql  up.sql
migrations/2025-02-11-212909_setup_transponder_companies_table/: down.sql  up.sql
migrations/2025-02-11-214255_setup_apartments_table/: down.sql  up.sql
migrations/2025-02-11-214814_setup_renters_table/: down.sql  up.sql
migrations/2025-02-11-220710_setup_access_tokens_table/: down.sql  up.sql
migrations/2025-02-11-221009_setup_payment_methods_table/: down.sql  up.sql
migrations/2025-02-11-221142_setup_vehicles_table/: down.sql  up.sql
migrations/2025-02-11-221240_setup_agreements_table/: down.sql  up.sql
migrations/2025-02-11-221454_setup_charges_table/: down.sql  up.sql
migrations/2025-02-11-221625_setup_damages_table/: down.sql  up.sql
migrations/2025-02-11-221748_setup_payments_table/: down.sql  up.sql
migrations/2025-03-14-163104_setup_rental_transaction_table/: down.sql  up.sql
migrations/2025-03-18-223236_setup_damage_submissions_table/: down.sql  up.sql
migrations/2025-04-07-180234_create_company_apartment/: down.sql  up.sql
migrations/2025-04-09-190913_set_subscription_payment_method_id/: down.sql  up.sql
migrations/2025-04-11-230345_setup_vefications_table/: down.sql  up.sql
migrations/2025-04-14-183840_update_transpnder_companies/: down.sql  up.sql
migrations/2025-04-14-202356_update_charges/: down.sql  up.sql
migrations/2025-04-22-012023_update_charges_checksum/: down.sql  up.sql
migrations/2025-04-23-013627_setup_vehicle_snapshots/: down.sql  up.sql
migrations/2025-05-05-030635_add_support_for_late_capture_for_payment/: down.sql  up.sql
migrations/2025-05-12-031635_remove_pick_up_drop_off_images/: down.sql  up.sql
migrations/2025-05-12-032451_add_support_for_uni/: down.sql  up.sql
migrations/2025-05-29-063155_create_purdue_apartment/: down.sql  up.sql
migrations/2025-06-06-201322_change_is_uni_to_uni_id/: down.sql  up.sql
migrations/2025-06-07-011812_setup_promos_table/: down.sql  up.sql
migrations/2025-06-17-175538_setup_state_and_taxes_table/: down.sql  up.sql
migrations/2025-06-20-011337_add_apple_push_notification/: down.sql  up.sql
migrations/2025-07-14-183906_change_apartments_properties/: down.sql  up.sql
migrations/2025-07-15-205056_change_purdue_uni_id/: down.sql  up.sql
migrations/2025-07-22-020644_change_payment_method_table/: down.sql  up.sql
migrations/2025-08-09-051109_add_multi_location_support_for_apartment/: down.sql  up.sql
migrations/2025-08-10-214327_vehicles_remote_mgmt_id/: down.sql  up.sql
migrations/2025-08-11-035734_agreement_no_longer_needs_apartment_id/: down.sql  up.sql
migrations/2025-08-11-142023_location_operational/: down.sql  up.sql
migrations/2025-08-11-142945_vehicle_requires_own_insurance/: down.sql  up.sql
migrations/2025-08-11-144456_payment_method_cdw_enabled/: down.sql  up.sql
migrations/2025-08-11-164855_payment_is_only_deposit_and_strong_ref_to_agreement/: down.sql  up.sql
migrations/2025-08-12-021233_drop_location_enabled/: down.sql  up.sql
migrations/2025-08-12-050344_alter_agreement_table_promoId_type/: down.sql  up.sql
migrations/2025-08-13-212614_remote_mgmt_enum_geotab/: down.sql  up.sql
migrations/2025-08-24-205647_update_vehicle_snapshot_model/: down.sql  up.sql
migrations/2025-10-08-082135-0000_update_apartment_protection_plan/: down.sql  up.sql
migrations/2025-10-08-083102-0000_update_agreement_protection_plan/: down.sql  up.sql
migrations/2025-10-25-234522_consolidate/: down.sql  up.sql
src/: db.rs  gen_token.rs  helper_model.rs  main.rs  model.rs  proj_config.rs  scheduled_tasks.rs  schema.rs  schemas.rs
src/api/: header_check.rs  mod.rs
src/integration/: apns_veygo.rs  gcloud_storage_veygo.rs  mailgun_veygo.rs  mod.rs  sendgrid_veygo.rs  smartcar_veygo.rs  stripe.rs  stripe_veygo.rs  tesla_curl.rs  tesla_veygo.rs  (+1 more)
templates/: document_rejection.html  email_verification.html
(+87 files in other folders)
